--- a/build
+++ b/build
@@ -1,5 +1,6 @@
 #!/bin/bash
 cd /tmp/rom # Depends on where source got synced
+rm -rf .repo & # lets remove unnecessary things, so that no storage issue can occur
 
 # Normal build steps
 . build/envsetup.sh
