--- a/build
+++ b/build
@@ -4,6 +4,7 @@ rm -rf .repo & # lets remove unnecessary things, so that no storage issue can oc
 
 # Normal build steps
 . build/envsetup.sh
+export SELINUX_IGNORE_NEVERALLOWS=true
 lunch aosp_platina-userdebug
 export CCACHE_DIR=/tmp/ccache
 export CCACHE_EXEC=$(which ccache)
