--- a/build
+++ b/build
@@ -5,7 +5,7 @@ rm -rf .repo & # lets remove unnecessary things, so that no storage issue can oc
 # Normal build steps
 . build/envsetup.sh
 export SELINUX_IGNORE_NEVERALLOWS=true
-breakfast lineage_platina
+breakfast platina
 export CCACHE_DIR=/tmp/ccache
 export CCACHE_EXEC=$(which ccache)
 export USE_CCACHE=1
