--- a/build
+++ b/build
@@ -51,9 +51,9 @@ make api-stubs-docs || echo no problem
 make system-api-stubs-docs || echo no problem
 make test-api-stubs-docs || echo no problem
 
-mka bacon&
+mka bacon &
 sleep 85m
-kill 1%
+kill %1
 ccache -s \
 	&& send_zip=$(up out/target/product/platina/*zip) && tg $id "Build Succeed!
 $send_zip" \
